W2.Parser/alt/test/invalid/invalid2.c
//NOT ERROR FREE - This test case includes an error in which a multi line comment is not closed
#include <stdio.h>

int main()
{
	/* This comment is not closed
	printf("Hello");
	return 0;
}
	